--- a/views/quienesSomos.html
+++ b/views/quienesSomos.html
@@ -18,7 +18,7 @@
     <header class="main-header">
         <nav class="main-navbar">
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
-            <ul class="left-navbar">                
+            <ul class="left-navbar">
                 <li><a href="/">Home </a></li>
                 <li><a href="/notFound">Quienes somos </a></li>
                 <li><a href="/notFound">Nuestras Recetas </a></li>
@@ -53,24 +53,27 @@
     <section class="pd-quienes-somos-area">
 
         <div class="pd-quienes-somos-right">
-            <div class="pd-quienes-somos-imgs">
-                <img src="/images/img-beer-temporary.jpg" alt="beer">
+            <img src="/images/img-beer-temporary.jpg" alt="beer">
+            <div>
+                <h6>Nosotros</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias tempora quod eius veritatis,
+                    ullam deleniti, officia, quisquam repudiandae perspiciatis explicabo harum. Impedit esse, mollitia
+                    consequuntur pariatur dolores consectetur beatae!</p>
             </div>
-            <h5>Nosotros</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias tempora quod eius veritatis, ullam deleniti, officia, quisquam repudiandae perspiciatis explicabo harum. Impedit esse, mollitia consequuntur pariatur dolores consectetur beatae!</p>
-                
         </div>
 
         <div class="pd-quienes-somos-left">
-            <div class="pd-quienes-somos-imgs">
-                <img src="/images/img-beer-temporary.jpg" alt="beer">
+            <img src="/images/img-beer-temporary.jpg" alt="beer">
+            <div>
+                <h6>La cervecería</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias tempora quod eius veritatis,
+                    ullam deleniti, officia, quisquam repudiandae perspiciatis explicabo harum. Impedit esse, mollitia
+                    consequuntur pariatur dolores consectetur beatae!</p>
             </div>
-            <h5>La cervecería</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias tempora quod eius veritatis, ullam deleniti, officia, quisquam repudiandae perspiciatis explicabo harum. Impedit esse, mollitia consequuntur pariatur dolores consectetur beatae!</p>
-                
+
         </div>
 
-        
+
 
     </section>
     </div>
