subiendo combinacion de index con tienda y links social media funcionales

--- a/views/index.html
+++ b/views/index.html
@@ -47,9 +47,9 @@
                 <a href="#" class="lupa"><i class="fas fa-beer"></i></a>
             </div> 
             <div class="social-media-bar">
-                <a href="#" class="redes2"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank" class="redes2"><i class="fab fa-whatsapp"></i></a>
                 <a href="#" class="redes2"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="redes2"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank" class="redes2"><i class="fab fa-instagram"></i></a>
             </div>           
         </div>
     </header>
@@ -97,15 +97,66 @@
  <section class="bottom-content">
 
  <div class="bottom-content">
-        <article class="art-2">
-            <img src="/images/bottle.jpg" alt="">
-        </article>
-        <article class="art-4">
-            <img src="/images/beerGlasses.jpg" alt="" > 
-        </article>
-        <article class="art-5">
-            <img src="/images/beerJar.jpg" alt="" > 
-        </article>
+
+    <article class="pd-product">
+        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
+        <div class="pd-datos-cerveza">
+            <h4>IPA</h4>
+            <h4>$ 250</h4>
+            <button class="pd-seleccionar">Seleccionar</button>
+            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+        </div>
+
+    </article>
+
+    <article class="pd-product">
+        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
+        <div class="pd-datos-cerveza">
+            <h4>Golden Ale</h4>
+            <h4>$ 200</h4>
+            <button class="pd-seleccionar">Seleccionar</button>
+            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+        </div>
+    </article>
+
+    <article class="pd-product">
+        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
+        <div class="pd-datos-cerveza">
+            <h4>Irish Red</h4>
+            <h4>$ 200</h4>
+            <button class="pd-seleccionar">Seleccionar</button>
+            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+        </div>
+    </article>
+
+    <article class="pd-product">
+        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+        <div class="pd-datos-cerveza">
+            <h4>Stout</h4>
+            <h4>$ 200</h4>
+            <button class="pd-seleccionar"><a href="/productDetail">Seleccionar</a></button>
+            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+        </div>
+    </article>
+
+    <article class=" pd-product">
+        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+        <div class="pd-datos-cerveza">
+            <h4>Honey</h4>
+            <h4>$ 200</h4>
+            <button class="pd-seleccionar">Seleccionar</button>
+            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+        </div>
+    </article>
+
+    <article class="pack-customized">
+        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+        <div class="pd-datos-cerveza">
+            <h4>Pack Personalizado</h4>
+            <h4>Desde $ 600</h4>
+            <button class="pd-seleccionar"><a href="/pack">Seleccionar</a></button>
+        </div>
+    </article>
     </div>
 </section>   
   
@@ -148,8 +199,8 @@
         </ul>
         <ul class="footer-social-media">
             <li>Contacto</li>
-            <li><a href="" >  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="" > @cervezaChec<i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank">  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank"> @cervezaChec<i class="fab fa-instagram"></i></a></li>
             <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
             <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
         </ul>
