--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,12 +4,24 @@
   padding: 0;
 }
 
+
+body  {
+  background-color: #eeede1a8;
+  font-family: "Montagu Slab", serif;
+  /*background-image: url("/Desing/imgs/bg1.png");*/
+  background-size: auto auto;
+}
+
 .enDesarrollo{
   display: flex;
   flex-direction: column;
   margin: 200PX auto;
   align-items: center;
 
+}
+
+h1,h2,h3,h4,h5,h6{
+  color: #000;
 }
 
 a { text-decoration: none;}
@@ -913,16 +925,7 @@ div.reel-4 {
   max-height: 200px;
 }
   /*seccion Media*/
-  body.ind-body {
-    background-color: #eeede1a8;
-    font-family: "Montagu Slab", serif;
-    background-image: url("/Desing/Logo-Etiqueta-Originals/512x512original.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 40%;
-    position: relative;
-    background-blend-mode: lighten;
-  }
+  
   section.ind-bottom {
     display: flex;
   }
