--- a/views/quienesSomos.html
+++ b/views/quienesSomos.html
@@ -18,7 +18,7 @@
     <header class="main-header">
         <nav class="main-navbar">
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
-            <ul class="left-navbar">
+            <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
                 <li><a href="/notFound">Quienes somos </a></li>
                 <li><a href="/notFound">Nuestras Recetas </a></li>
@@ -33,20 +33,20 @@
                     </div>
                 </li>
             </ul>
-        </nav>
+        </nav> 
         <div class="secondary-navbar">
             <div class="hamburguer-button">
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars"></i> 
             </div>
             <div class="search-bar">
-                <input type="text" placeholder="Busca aquí">
+                <input type="text" placeholder="Busca aquí">                
                 <a href="#" class="lupa"><i class="fas fa-beer"></i></a>
-            </div>
+            </div> 
             <div class="social-media-bar">
-                <a href="#" class="redes2"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank" class="redes2"><i class="fab fa-whatsapp"></i></a>
                 <a href="#" class="redes2"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="redes2"><i class="fab fa-instagram"></i></a>
-            </div>
+                <a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank" class="redes2"><i class="fab fa-instagram"></i></a>
+            </div>           
         </div>
     </header>
 
@@ -80,7 +80,7 @@
     <footer>
         <div class="main-footer">
             <div class="div-content-logoFooter">
-                <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">
+                <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
             </div>
             <ul class="footer-links">
                 <li>Enlaces</li>
@@ -90,10 +90,10 @@
             </ul>
             <ul class="footer-social-media">
                 <li>Contacto</li>
-                <li><a href=""> +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
-                <li><a href=""> @cervezaChec<i class="fab fa-instagram"></i></a></li>
-                <li><a href=""> /checCerveceria<i class="fab fa-facebook"></i></a></li>
-                <li><a href=""></i> chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank">  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
+                <li><a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank"> @cervezaChec<i class="fab fa-instagram"></i></a></li>
+                <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
+                <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
             </ul>
         </div>
         <div class="copyright">
