--- a/views/register.html
+++ b/views/register.html
@@ -40,9 +40,9 @@
                 <a href="#" class="lupa"><i class="fas fa-beer"></i></a>
             </div> 
             <div class="social-media-bar">
-                <a href="#" class="redes2"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank" class="redes2"><i class="fab fa-whatsapp"></i></a>
                 <a href="#" class="redes2"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="redes2"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank" class="redes2"><i class="fab fa-instagram"></i></a>
             </div>           
         </div>
     </header>
@@ -61,28 +61,28 @@
             
         </form>       
     </section>
-<footer>
-    <div class="main-footer">
-        <div class="div-content-logoFooter">
-            <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
+    <footer>
+        <div class="main-footer">
+            <div class="div-content-logoFooter">
+                <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
+            </div>
+            <ul class="footer-links">
+                <li>Enlaces</li>
+                <li><a href="">Tienda </a></li>
+                <li><a href="">Quienes somos </a></li>
+                <li><a href="">Nuestras Recetas </a></li>
+            </ul>
+            <ul class="footer-social-media">
+                <li>Contacto</li>
+                <li><a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank">  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
+                <li><a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank"> @cervezaChec<i class="fab fa-instagram"></i></a></li>
+                <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
+                <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
+            </ul>
         </div>
-        <ul class="footer-links">
-            <li>Enlaces</li>
-            <li><a href="">Tienda </a></li>
-            <li><a href="">Quienes somos </a></li>
-            <li><a href="">Nuestras Recetas </a></li>
-        </ul>
-        <ul class="footer-social-media">
-            <li>Contacto</li>
-            <li><a href="" >  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="" > @cervezaChec<i class="fab fa-instagram"></i></a></li>
-            <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
-            <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
-        </ul>
-    </div>
-    <div class="copyright">
-        Copyright © 2022 - All rights reserved - Created by Grupo 8
-    </div>
-</footer>
+        <div class="copyright">
+            Copyright © 2022 - All rights reserved - Created by Grupo 8
+        </div>
+    </footer>
 </body>
 </html>
