--- a/views/productPage.html
+++ b/views/productPage.html
@@ -20,7 +20,7 @@
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
-                <li><a href="/notFound">Quienes somos </a></li>
+                <li><a href="/quienesSomos">Quienes somos </a></li>
                 <li><a href="/notFound">Nuestras Recetas </a></li>
                 <li><a href="/notFound">Contactanos </a></li>
             </ul>
@@ -129,8 +129,8 @@
             </div>
             <ul class="footer-links">
                 <li>Enlaces</li>
-                <li><a href="">Tienda </a></li>
-                <li><a href="">Quienes somos </a></li>
+                <li><a href="productPage">Tienda </a></li>
+                <li><a href="/quienesSomos">Quienes somos </a></li>
                 <li><a href="">Nuestras Recetas </a></li>
             </ul>
             <ul class="footer-social-media">
