--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
-                <li><a href="/notFound">Quienes somos </a></li>
+                <li><a href="/quienesSomos">Quienes somos </a></li>
                 <li><a href="/notFound">Nuestras Recetas </a></li>
                 <li><a href="/notFound">Contactanos </a></li>
             </ul>
@@ -193,7 +193,7 @@
         </div>
         <ul class="footer-links">
             <li>Enlaces</li>
-            <li><a href="">Tienda </a></li>
+            <li><a href="/quienesSomos">Tienda </a></li>
             <li><a href="">Quienes somos </a></li>
             <li><a href="">Nuestras Recetas </a></li>
         </ul>
