--- a/views/register.html
+++ b/views/register.html
@@ -17,7 +17,7 @@
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
-                <li><a href="/notFound">Quienes somos </a></li>
+                <li><a href="/quienesSomos">Quienes somos </a></li>
                 <li><a href="/notFound">Nuestras Recetas </a></li>
                 <li><a href="/notFound">Contactanos </a></li>
             </ul>
