--- a/views/index.html
+++ b/views/index.html
@@ -75,21 +75,19 @@
             <img src="/Desing/Logo-Etiqueta-Originals/480x480original.png" alt="" > 
         </article>
         <h3> CONOCÉ NUESTROS PRODUCTOS DESTACADOS</h3>
-            <h4>   Sus caracteristicas y proceso de producción.</h4>
-                <h4>  Los secretos de su cocina.</h4>
+            <h4 >   Sus caracteristicas y proceso de producción.</h4>
+                <h4 >  Los secretos de su cocina.</h4>
         
-         <button class="art-1">
-         <h4>  <a href="/productDetail"></a> INGRESÁ </h4>
+         <button class="lg-submit">
+         <a href="/productDetail"></a> Ingresá 
         </button>
     </div>
     </div>
     <div class="right-content">
         
         <article class="art-3">
-                <h4>Cuando abrimos una cerveza, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos, sonrisas y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida,</h4>
-                <h4 class="bold"> abrir una buena cerveza de Calidad y hecha para todos los gustos, sin dudas marca la diferencia.</h4>
-                 <h4>   Mientras disfrutamos, se pierde la nocion del tiempo y la sobremesa se extiende. </h4>
-               <h3> Un aplauso para el anfitrion, y seguro hay un próximo encuentro </h3>
+                Cuando abrimos una cerveza CHEC, hecha con Calidad y para todos los gustos, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida. Mientras disfrutamos, se pierde nocion del tiempo y la sobremesa se hace mas extensa.
+               <h3> Un aplauso para el anfitrion, y Chec! te asegura un próximo encuentro...  <i class="fas fa-beer"> </i>  </h3>
         </article>
         
     </div>
