estandarizo estilo hover de botones PP y PD, corrijo alineamiento de product details

--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -141,8 +141,8 @@
             </div>
 
             <div class="pd-options">
-                <button class="pd-buy"><a href="/productCart">Comprar</a></button>
-                <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+                <button class="pd-buy"><a href="/productCart" class="lg-a">Comprar</a></button>
+                <button class="pd-add"><a href="/productCart" class="lg-a">Agregar al carrito</a></button>
             </div>
         </div>
         </div>
