--- a/views/productPage.html
+++ b/views/productPage.html
@@ -61,7 +61,7 @@
                     <h4>IPA</h4>
                     <h4>$ 250</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
-                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+                    <button class="pd-add"><a href="/productCart" class="lg-a">Agregar al carrito</a></button>
                 </div>
 
             </article>
@@ -72,7 +72,7 @@
                     <h4>Golden Ale</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
-                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+                    <button class="pd-add"><a href="/productCart" class="lg-a">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -82,7 +82,7 @@
                     <h4>Irish Red</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
-                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+                    <button class="pd-add"><a href="/productCart" class="lg-a">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -91,8 +91,8 @@
                 <div class="pd-datos-cerveza">
                     <h4>Stout</h4>
                     <h4>$ 200</h4>
-                    <button class="pd-seleccionar"><a href="/productDetail">Seleccionar</a></button>
-                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+                    <button class="pd-seleccionar"><a href="/productDetail" class="lg-a">Seleccionar</a></button>
+                    <button class="pd-add"><a href="/productCart" class="lg-a">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -102,7 +102,7 @@
                     <h4>Honey</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
-                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
+                    <button class="pd-add"><a href="/productCart" class="lg-a">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -111,7 +111,7 @@
                 <div class="pd-datos-cerveza">
                     <h4>Pack Personalizado</h4>
                     <h4>Desde $ 600</h4>
-                    <button class="pd-seleccionar"><a href="/pack">Seleccionar</a></button>
+                    <button class="pd-seleccionar"><a href="/pack" class="lg-a">Seleccionar</a></button>
                 </div>
             </article>
     </main>
