--- a/views/index.html
+++ b/views/index.html
@@ -71,9 +71,9 @@
     <section class="ind-middle">
      <div class="left-content">
         <div class="best">
-        <article class="art-1">
+        <div class="art-1">
             <img src="/Desing/Logo-Etiqueta-Originals/480x480original.png" alt="" > 
-        </article>
+        </div>
         <h3> CONOCÉ NUESTROS PRODUCTOS DESTACADOS</h3>
             <h4 >   Sus caracteristicas y proceso de producción.</h4>
                 <h4 >  Los secretos de su cocina.</h4>
@@ -86,9 +86,10 @@
     <div class="right-content">
         
         <article class="art-3">
-                Cuando abrimos una cerveza CHEC, hecha con Calidad y para todos los gustos, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida. Mientras disfrutamos, se pierde nocion del tiempo y la sobremesa se hace mas extensa.
-               <h3> Un aplauso para el anfitrion, y Chec! te asegura un próximo encuentro...  <i class="fas fa-beer"> </i>  </h3>
-        </article>
+                <p>Cuando abrimos una cerveza <i>CHEC</i>, hecha con Calidad y para todos los gustos, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida. Mientras disfrutamos, se pierde nocion del tiempo y la sobremesa se hace mas extensa.</p>
+               <h3> Un aplauso para el anfitrion, y <i>CHEC </i>  te asegura un próximo encuentro... <i class="fas fa-beer"> </i>  </h3>
+        
+            </article>
         
     </div>
 </section>
