--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -1,54 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/Desing/Logo-Etiqueta-Originals/fav-icon.png">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montagu+Slab&family=Roboto&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/1eb023256c.js" crossorigin="anonymous"></script>
-    <title>Detalle Producto</title>
-</head>
+<!-- Head-->
+<%- include("./partials/head") %>
 
 <body>
-    <header class="main-header">
-        <nav class="main-navbar">
-            <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
-            <ul class="left-navbar">                
-                <li><a href="/">Home </a></li>
-                <li><a href="/quienesSomos">Quienes somos </a></li>
-                <li><a href="/notFound">Nuestras Recetas </a></li>
-                <li><a href="/notFound">Contactanos </a></li>
-            </ul>
-            <ul class="rigth-navbar">
-                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li>
-                    <div class="pd-pc-links">
-                        <a href="/productPage" class="tienda-botton">Tienda</a>
-                        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-                    </div>
-                </li>
-            </ul>
-        </nav> 
-        <div class="secondary-navbar">
-            <div class="hamburguer-button">
-                <i class="fas fa-bars"></i> 
-            </div>
-            <div class="search-bar">
-                <input type="text" placeholder="Busca aquí">                
-                <a href="#" class="lupa"><i class="fas fa-beer"></i></a>
-            </div> 
-            <div class="social-media-bar">
-                <a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank" class="redes2"><i class="fab fa-whatsapp"></i></a>
-                <a href="#" class="redes2"><i class="fab fa-facebook"></i></a>
-                <a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank" class="redes2"><i class="fab fa-instagram"></i></a>
-            </div>           
-        </div>
-    </header>
+    <!-- Header-->
+    <%- include("./partials/header") %>
 
     <section class="pd-product-area">
 
@@ -149,29 +107,8 @@
 
     </section>
     </div>
-    <footer>
-        <div class="main-footer">
-            <div class="div-content-logoFooter">
-                <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
-            </div>
-            <ul class="footer-links">
-                <li>Enlaces</li>
-                <li><a href="">Tienda </a></li>
-                <li><a href="">Quienes somos </a></li>
-                <li><a href="">Nuestras Recetas </a></li>
-            </ul>
-            <ul class="footer-social-media">
-                <li>Contacto</li>
-                <li><a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank">  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
-                <li><a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank"> @cervezaChec<i class="fab fa-instagram"></i></a></li>
-                <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
-                <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
-            </ul>
-        </div>
-        <div class="copyright">
-            Copyright © 2022 - All rights reserved - Created by Grupo 8
-        </div>
-    </footer>
+    <!-- Footer-->
+    <%- include("./partials/footer") %>
 </body>
 
 </html>
