corrijo enlaces en header y footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,9 +5,9 @@
         </div>
         <ul class="footer-links">
             <li>Enlaces</li>
-            <li><a href="/quienesSomos">Tienda </a></li>
-            <li><a href="">Quienes somos </a></li>
-            <li><a href="">Nuestras Recetas </a></li>
+            <li><a href="/productPage">Tienda </a></li>
+            <li><a href="/quienesSomos">Quienes somos </a></li>
+            <li><a href="/enDesarrollo">Nuestras Recetas </a></li>
         </ul>
         <ul class="footer-social-media">
             <li>Contacto</li>
