--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,7 @@
         <ul class="left-navbar">                
             <li><a href="/">Home </a></li>
             <li><a href="/quienesSomos">Quienes somos </a></li>
-            <li><a href="/notFound">Nuestras Recetas </a></li>
-            <li><a href="/notFound">Contactanos </a></li>
+            <li><a href="/enDesarrollo">Nuestras Recetas </a></li>
         </ul>
         <ul class="rigth-navbar">
             <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
