--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,13 +132,9 @@
 
     </div>
 
-    <div class="suscribe-section" id="suscribe-section">
-        <div class="suscribe-container">
-            <p class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></p>           
-            <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
-        </div> 
-        <i class="fas fa-times"  onclick="closeSection()"></i>       
-    </div>
+
+    <!-- Suscribe email-->
+    <%- include("./partials/suscribe") %>
 
     <!-- Footer-->
     <%- include("./partials/footer") %>
